--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask==1.1.2
-numpy==1.18.5
-nltk==3.5
-tensorflow==2.3.1
-scikit-learn==0.23.2
-gunicorn==20.0.4
+jupyter-black==0.4.0
+kaggle==1.6.17
+matplotlib==3.9.2
+nltk==3.9.1
+pandas==2.2.2
+scikit-learn==1.5.2 
+tensorflow==2.16.1
